tests/models/enum/unit/fail/min_length.stderr
error: Only support alias term on the unit field.
 --> tests/models/enum/unit/fail/min_length.rs:5:5
  |
5 |     Value
  |     ^^^^^
